add vnpay config and create payment url